force-app/main/default/objects/HaravanProductVariant__c/HaravanProductVariant__c.object-meta.xml
<CustomObject>
    <label>Product Variants</label>
    <nameField>
        <label>Variant Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>