force-app/main/default/objects/HaravanProductVariant__c/fields/ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnit__c</fullName>
    <label>Charge Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>