force-app/main/default/objects/HaravanProductVariant__c/fields/CompareatPrice__c.field-meta.xml
<CustomField>
    <fullName>CompareatPrice__c</fullName>
    <inlineHelpText>Pre-discount Price</inlineHelpText>
    <label>Compare at Price</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>