force-app/main/default/objects/HaravanProductVariant__c/fields/Continue_Selling_When_Out_of_Stock__c.field-meta.xml
<CustomField>
    <fullName>Continue_Selling_When_Out_of_Stock__c</fullName>
    <formula>IF( ContinueSellingWhenOutofStock__c = &apos;continue&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continue Selling When Out of Stock</label>
    <type>Checkbox</type>
</CustomField>