force-app/main/default/objects/HaravanProductVariant__c/fields/ContinueSellingWhenOutofStock__c.field-meta.xml
<CustomField>
    <fullName>ContinueSellingWhenOutofStock__c</fullName>
    <label>Continue Selling When Out of Stock</label>
    <length>100</length>
    <type>Text</type>
</CustomField>