force-app/main/default/objects/HaravanProductVariant__c/fields/CostperUnit__c.field-meta.xml
<CustomField>
    <fullName>CostperUnit__c</fullName>
    <inlineHelpText>Original Price (Cost)</inlineHelpText>
    <label>Cost Per Unit</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>