force-app/main/default/objects/HaravanProductVariant__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Haravan_Product__c</referenceTo>
    <relationshipLabel>Product Variants</relationshipLabel>
    <relationshipName>Haravan_Product_Variant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>