force-app/main/default/objects/HaravanProductVariant__c/fields/Quantity_of_Stock_in__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Stock_in__c</fullName>
    <label>Quantity of Stock in</label>
    <summarizedField>Stock_In__c.Order_Quantity__c</summarizedField>
    <summaryForeignKey>Stock_In__c.Product_Variants__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>