force-app/main/default/objects/HaravanProductVariant__c/fields/Quantity_of_Stock_out__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Stock_out__c</fullName>
    <label>Quantity of Stock out</label>
    <summarizedField>StockOut__c.Order_quantity__c</summarizedField>
    <summaryForeignKey>StockOut__c.Product_Variant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>