force-app/main/default/objects/HaravanProductVariant__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <inlineHelpText>Stock Keeping Unit, should be unique and contain both characters and numbers</inlineHelpText>
    <label>SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>