force-app/main/default/objects/HaravanProductVariant__c/fields/Thisisaphysicalproduct__c.field-meta.xml
<CustomField>
    <fullName>Thisisaphysicalproduct__c</fullName>
    <label>This is a physical product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>