force-app/main/default/objects/HaravanProductVariant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity_of_Stock_in__c</columns>
    <columns>Quantity_of_Stock_out__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>CompareatPrice__c</columns>
    <columns>SKU__c</columns>
    <columns>Barcode__c</columns>
    <columns>Color__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>